[package]
name = "visonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.10.0"
toml = "0.5.8"
log = "0.4.14"
thiserror = "1.0.30"
pretty_env_logger = "0.4.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.14", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }