[package]
name = "visonic"
version = "0.4.1"
edition = "2021"

[dependencies]
rumqttc = "0.10.0"
toml = "0.5.8"
log = "0.4.14"
thiserror = "1.0.30"
pretty_env_logger = "0.4.0"
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.14", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }